---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn foo(x) -> String {\n  x <> \"\\u{0308}\"\n}\n"
---
module rec my.``mod``
let foo (x: string): string = begin
    x + "\u0308"
end
